[gd_scene load_steps=6 format=3 uid="uid://b8dof3h5a64ek"]

[ext_resource type="Script" path="res://hud/in_game_bar/in_game_bar.gd" id="1_dc2xq"]
[ext_resource type="Texture2D" uid="uid://dfu2cqctwjsck" path="res://hud/ui_hp_middle.png" id="2_7sss8"]
[ext_resource type="PackedScene" uid="uid://cgc1hn53qkhmp" path="res://hud/in_game_bar/selected_skill_button.tscn" id="2_jg8h4"]
[ext_resource type="Texture2D" uid="uid://b0nj4dl34n3uq" path="res://hud/images/ui_skill_bar.png" id="4_skq2v"]
[ext_resource type="Texture2D" uid="uid://1k66qlwr8m75" path="res://hud/images/ui_usable_slot.png" id="5_n7iwk"]

[node name="InGameBar" type="Control"]
texture_filter = 1
layout_mode = 3
anchor_top = 0.836
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.27197
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dc2xq")

[node name="HealthMana" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 2.08165e-12)
layout_mode = 2
offset_left = 28.0
offset_top = -254.0
offset_right = 388.0
offset_bottom = -54.0
size_flags_horizontal = 2

[node name="Health" type="TextureProgressBar" parent="HealthMana"]
custom_minimum_size = Vector2(40, 200)
layout_mode = 2
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("2_7sss8")

[node name="HSeparator" type="VSeparator" parent="HealthMana"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2

[node name="Mana" type="TextureProgressBar" parent="HealthMana"]
custom_minimum_size = Vector2(20, 200)
layout_mode = 2
value = 35.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("2_7sss8")

[node name="CastBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = 399.0
offset_top = -125.0
offset_right = 960.0
offset_bottom = -98.0
show_percentage = false

[node name="SkillBarBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.102
anchor_top = -0.038
anchor_right = 0.45
anchor_bottom = 0.34
offset_left = 0.495995
offset_top = 0.0280004
offset_right = -0.400024
offset_bottom = -0.0400009
texture = ExtResource("4_skq2v")
expand_mode = 3

[node name="Skill0" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.287
anchor_right = 0.36
anchor_bottom = 0.85
offset_left = 0.199997
offset_top = 6.0
offset_right = 0.0
offset_bottom = 0.0
skill_number = "2"

[node name="Skill1" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.462
anchor_top = 0.15
anchor_right = 0.533
anchor_bottom = 0.85
offset_left = 0.199997
offset_right = -0.200027
offset_bottom = 0.0
skill_number = "3"

[node name="Skill2" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.635
anchor_top = 0.15
anchor_right = 0.707
anchor_bottom = 0.85
offset_left = -1.52588e-05
offset_right = 0.199982
offset_bottom = 0.0
skill_number = "4"

[node name="Skill3" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81
anchor_top = 0.15
anchor_right = 0.882
anchor_bottom = 0.85
offset_left = -3.05176e-05
offset_right = 0.199982
offset_bottom = 0.0
skill_number = "5"

[node name="Skill4" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.15
anchor_right = 0.185
anchor_bottom = 0.85
offset_left = 0.199997
offset_right = 0.0
offset_bottom = 0.0

[node name="Skill5" parent="SkillBarBackground" instance=ExtResource("2_jg8h4")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.207
anchor_top = 1.2
anchor_right = 1.28
anchor_bottom = 1.9
offset_left = 0.199982
offset_right = -6.10352e-05
offset_bottom = 0.0
skill_number = "_movement"

[node name="Item1" type="TextureButton" parent="SkillBarBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.11
anchor_top = -0.35
anchor_right = 0.06
anchor_bottom = 1.35
texture_normal = ExtResource("5_n7iwk")
ignore_texture_size = true
stretch_mode = 0

[node name="Item2" type="TextureButton" parent="SkillBarBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.192
anchor_top = -1.2
anchor_right = -0.022
anchor_bottom = 0.5
offset_left = -0.199997
offset_right = -0.199999
texture_normal = ExtResource("5_n7iwk")
ignore_texture_size = true
stretch_mode = 0

[node name="Item3" type="TextureButton" parent="SkillBarBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.277
anchor_top = -0.375
anchor_right = -0.107
anchor_bottom = 1.325
offset_left = -0.199997
offset_right = -0.199997
texture_normal = ExtResource("5_n7iwk")
ignore_texture_size = true
stretch_mode = 0

[node name="Item4" type="TextureButton" parent="SkillBarBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.192
anchor_top = 0.45
anchor_right = -0.022
anchor_bottom = 2.15
offset_left = -0.199997
offset_right = -0.199999
texture_normal = ExtResource("5_n7iwk")
ignore_texture_size = true
stretch_mode = 0
